前端学习笔记上传

--- a/前端技术重点知识笔记整理/js分类/参考页面/4-ajaxPromise.html
+++ b/前端技术重点知识笔记整理/js分类/参考页面/4-ajaxPromise.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>珠峰培训</title>
+    <title></title>
 </head>
 <body>
 <script src="js/ajaxPromise.js"></script>
