--- a/前端技术重点知识笔记整理/js分类/参考页面/1-response.html
+++ b/前端技术重点知识笔记整理/js分类/参考页面/1-response.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>珠峰培训</title>
+    <title></title>
     <link rel="stylesheet" href="css/reset.min.css">
     <!--<style>
         html, body {
