--- a/前端技术重点知识笔记整理/响应式布局/2-REM.html
+++ b/前端技术重点知识笔记整理/响应式布局/2-REM.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>珠峰培训</title>
+    <title>rem响应式布局</title>
     <link rel="stylesheet" href="reset.min.css">
     <style>
         html {
